<resources>
    <string name="app_name">OptikiTec</string>

    <string name="helper_username">Required *</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="signed_in_as">Signed in as</string>

    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="height">Height</string>

    <!-- Buttons -->
    <string name="download_button">Download</string>
    <string name="create_button">Create</string>
    <string name="share_button">Share</string>
    <string name="view_button">View</string>
    <string name="clearAll_button">Clear All</string>


</resources>