<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    tools:context=".MainActivity">

    <!-- Username text field -->
    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignedInStatus" />

    <!-- Width text field -->

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchMode"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:thumb="@drawable/thumb"
        app:track="@drawable/track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextWidthLayout"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="clear_text"
        android:hint="@string/width"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Length text field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLengthLayout"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="clear_text"
        android:hint="@string/length"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Height text field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextHeightLayout"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="clear_text"
        android:hint="@string/height"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Reset buttons -->

    <!-- Send button -->

    <Button
        android:id="@+id/createButton"
        style="@style/ScreenBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:enabled="false"
        android:text="@string/create_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextHeightLayout"
        app:layout_constraintStart_toStartOf="@+id/editTextHeightLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeightLayout" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="@+id/viewButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/share_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/viewButton"
        app:layout_constraintStart_toStartOf="@+id/viewButton"
        app:layout_constraintTop_toBottomOf="@+id/createButton" />

    <Button
        android:id="@+id/clearAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:height="50dp"
        android:enabled="false"
        android:onClick="resetAll"
        android:text="@string/clearAll_button"
        app:layout_constraintEnd_toEndOf="@+id/editTextHeightLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextHeightLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeightLayout" />

    <TextView
        android:id="@+id/SignedInStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/signed_in_as"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="@+id/createButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/view_button"
        app:layout_constraintEnd_toEndOf="@+id/createButton"
        app:layout_constraintStart_toStartOf="@+id/createButton"
        app:layout_constraintTop_toBottomOf="@+id/createButton" />

</androidx.constraintlayout.widget.ConstraintLayout>